--- a/views/admin/setting2.ejs
+++ b/views/admin/setting2.ejs
@@ -23,12 +23,14 @@
             <% for(var i = 0; i < data.camNum; i++) {%>
               <% i %>
             <% } %>
+            <input type="text" id="camNum" value="<%= data.camNum %>" name = "camNum" class="input" placeholder="camNum" required readonly>
+            <!--
             <select id="camNum" name="camNum" disabled>
               <option selected value="<%= data.camNum %>" class="input"><%= data.camNum %></option>
               <option value="1" class="input">1</option>
               <option value="2" class="input">2</option>
               <option value="3" class="input">3</option>
-            </select>
+            </select> -->
           </td>
         </tr>
         </table>
@@ -43,34 +45,39 @@
          <tr>
            <td class="info_image_left">저장 간격</td>
            <td>
+             <input class="info_camera" type="text" id="saveInterval" value="<%= data.saveInterval %>초" name = "saveInterval" class="input" placeholder="saveInterval" required readonly>
+             <!--
              <select id="saveInterval" name="saveInterval" disabled>
                <option value="<%= data.saveInterval %>" class="input"><%= data.saveInterval %>초</option>
                <option value="10" class="input">10초</option>
                <option value="20" class="input">20초</option>
                <option value="30" class="input">30초</option>
-             </select>
+             </select>-->
            </td>
          </tr>
          <tr>
            <td class="info_image_left">최대 저장 갯수</td>
            <td>
+            <input class="info_camera" type="text" id="saveNum" value="<%= data.saveNum %>개" name = "saveNum" class="input" placeholder="saveNum" required readonly>
+            <!--
              <select id="saveNum" name="saveNum" disabled>
                <option value="<%= data.saveNum %>" class="input"><%= data.saveNum %>개</option>
                <option value="100" class="input">100개</option>
                <option value="200" class="input">200개</option>
                <option value="300" class="input">300개</option>
-             </select>
+             </select>-->
            </td>
          </tr>
          <tr>
            <td class="info_image_left">최대 저장 기간</td>
            <td>
-             <select id="savePeriod" name="savePeriod" disabled>
+             <input class="info_camera" type="text" id="savePeriod" value="<%= data.savePeriod %>개월" name = "savePeriod" class="input" placeholder="savePeriod" required readonly>
+             <!--<select id="savePeriod" name="savePeriod" disabled>
                <option value="<%= data.savePeriod %>" class="input"><%= data.savePeriod %>개월</option>
                <option value="10" class="input">10개월</option>
                <option value="20" class="input">20개월</option>
                <option value="30" class="input">30개월</option>
-             </select>
+             </select>-->
            </td>
          </tr>
        </table>
@@ -106,12 +113,7 @@
               <% for(var i = 0; i < data.camNum; i++) {%>
                 <% i %>
               <% } %>
-              <select id="camNum" name="camNum">
-                <option selected value="<%= data.camNum %>" class="input"><%= data.camNum %></option>
-                <option value="1" class="input">1</option>
-                <option value="2" class="input">2</option>
-                <option value="3" class="input">3</option>
-              </select>
+              <input type="text" id="camNum" value="<%= data.camNum %>" name = "camNum" class="input" placeholder="camNum" required>
             </td>
             <td><button class="confirm btn submit" id="confirm_camera">확인</button></td>
           </tr>
@@ -127,34 +129,19 @@
            <tr>
              <td class="info_image_left">저장 간격</td>
              <td>
-               <select id="saveInterval" name="saveInterval">
-                 <option value="<%= data.saveInterval %>" class="input"><%= data.saveInterval %>초</option>
-                 <option value="10" class="input">10초</option>
-                 <option value="20" class="input">20초</option>
-                 <option value="30" class="input">30초</option>
-               </select>
+               <input class="info_camera" type="text" id="saveInterval" value="<%= data.saveInterval %>초" name = "saveInterval" class="input" placeholder="saveInterval" required readonly>
              </td>
            </tr>
            <tr>
              <td class="info_image_left">최대 저장 갯수</td>
              <td>
-               <select id="saveNum" name="saveNum">
-                 <option value="<%= data.saveNum %>" class="input"><%= data.saveNum %>개</option>
-                 <option value="100" class="input">100개</option>
-                 <option value="200" class="input">200개</option>
-                 <option value="300" class="input">300개</option>
-               </select>
+            <input class="info_camera" type="text" id="saveNum" value="<%= data.saveNum %>개" name = "saveNum" class="input" placeholder="saveNum" required readonly>
              </td>
            </tr>
            <tr>
              <td class="info_image_left">최대 저장 기간</td>
              <td>
-               <select id="savePeriod" name="savePeriod">
-                 <option value="<%= data.savePeriod %>" class="input"><%= data.savePeriod %>개월</option>
-                 <option value="10" class="input">10개월</option>
-                 <option value="20" class="input">20개월</option>
-                 <option value="30" class="input">30개월</option>
-               </select>
+             <input class="info_camera" type="text" id="savePeriod" value="<%= data.savePeriod %>개월" name = "savePeriod" class="input" placeholder="savePeriod" required readonly>
              </td>
              <!--<td><button class="confirm btn submit" id="confirm_image">확인</button></td>-->
            </tr>
@@ -190,12 +177,7 @@
                 <% for(var i = 0; i < data.camNum; i++) {%>
                   <% i %>
                 <% } %>
-                <select id="camNum" name="camNum">
-                  <option selected value="<%= data.camNum %>" class="input"><%= data.camNum %></option>
-                  <option value="1" class="input">1</option>
-                  <option value="2" class="input">2</option>
-                  <option value="3" class="input">3</option>
-                </select>
+                <input type="text" id="camNum" value="<%= data.camNum %>" name = "camNum" class="input" placeholder="camNum" required readonly>
               </td>
               <!--<td><button class="confirm btn submit" id="confirm_camera">확인</button></td>-->
             </tr>
@@ -211,36 +193,20 @@
              <tr>
                <td class="info_image_left">저장 간격</td>
                <td>
-                 <select id="saveInterval" name="saveInterval">
-                   <option value="<%= data.saveInterval %>" class="input"><%= data.saveInterval %>초</option>
-                   <option value="10" class="input">10초</option>
-                   <option value="20" class="input">20초</option>
-                   <option value="30" class="input">30초</option>
-                 </select>
+                 <input class="info_camera" type="text" id="saveInterval" value="<%= data.saveInterval %>초" name = "saveInterval" class="input" placeholder="saveInterval" required>
                </td>
              </tr>
              <tr>
                <td class="info_image_left">최대 저장 갯수</td>
                <td>
-                 <select id="saveNum" name="saveNum">
-                   <option value="<%= data.saveNum %>" class="input"><%= data.saveNum %>개</option>
-                   <option value="100" class="input">100개</option>
-                   <option value="200" class="input">200개</option>
-                   <option value="300" class="input">300개</option>
-                 </select>
+                 <input class="info_camera" type="text" id="saveNum" value="<%= data.saveNum %>개" name = "saveNum" class="input" placeholder="saveNum" required>
                </td>
              </tr>
              <tr>
                <td class="info_image_left">최대 저장 기간</td>
                <td>
-                 <select id="savePeriod" name="savePeriod">
-                   <option value="<%= data.savePeriod %>" class="input"><%= data.savePeriod %>개월</option>
-                   <option value="10" class="input">10개월</option>
-                   <option value="20" class="input">20개월</option>
-                   <option value="30" class="input">30개월</option>
-                 </select>
+               <input class="info_camera" type="text" id="savePeriod" value="<%= data.savePeriod %>개월" name = "savePeriod" class="input" placeholder="savePeriod" required>
                </td>
-               <!--<td><button class="confirm btn submit" id="confirm_image">확인</button></td>-->
              </tr>
            </table>
            </div>
