--- a/views/admin/setting2.ejs
+++ b/views/admin/setting2.ejs
@@ -43,9 +43,9 @@
           <tr></tr>
           <tr></tr>
          <tr>
-           <td class="info_image_left">저장 간격</td>
+           <td class="info_image_left">저장 간격 (초)</td>
            <td>
-             <input class="info_camera" type="text" id="saveInterval" value="<%= data.saveInterval %>초" name = "saveInterval" class="input" placeholder="saveInterval" required readonly>
+             <input class="info_camera" type="text" id="saveInterval" value="<%= data.saveInterval %>" name = "saveInterval" class="input" placeholder="saveInterval" required readonly>
              <!--
              <select id="saveInterval" name="saveInterval" disabled>
                <option value="<%= data.saveInterval %>" class="input"><%= data.saveInterval %>초</option>
@@ -56,9 +56,9 @@
            </td>
          </tr>
          <tr>
-           <td class="info_image_left">최대 저장 갯수</td>
+           <td class="info_image_left">최대 저장 갯수 (개)</td>
            <td>
-            <input class="info_camera" type="text" id="saveNum" value="<%= data.saveNum %>개" name = "saveNum" class="input" placeholder="saveNum" required readonly>
+            <input class="info_camera" type="text" id="saveNum" value="<%= data.saveNum %>" name = "saveNum" class="input" placeholder="saveNum" required readonly>
             <!--
              <select id="saveNum" name="saveNum" disabled>
                <option value="<%= data.saveNum %>" class="input"><%= data.saveNum %>개</option>
@@ -69,9 +69,9 @@
            </td>
          </tr>
          <tr>
-           <td class="info_image_left">최대 저장 기간</td>
+           <td class="info_image_left">최대 저장 기간 (개월)</td>
            <td>
-             <input class="info_camera" type="text" id="savePeriod" value="<%= data.savePeriod %>개월" name = "savePeriod" class="input" placeholder="savePeriod" required readonly>
+             <input class="info_camera" type="text" id="savePeriod" value="<%= data.savePeriod %>" name = "savePeriod" class="input" placeholder="savePeriod" required readonly>
              <!--<select id="savePeriod" name="savePeriod" disabled>
                <option value="<%= data.savePeriod %>" class="input"><%= data.savePeriod %>개월</option>
                <option value="10" class="input">10개월</option>
@@ -127,21 +127,21 @@
             <tr></tr>
             <tr></tr>
            <tr>
-             <td class="info_image_left">저장 간격</td>
+             <td class="info_image_left">저장 간격 (초)</td>
              <td>
-               <input class="info_camera" type="text" id="saveInterval" value="<%= data.saveInterval %>초" name = "saveInterval" class="input" placeholder="saveInterval" required readonly>
+               <input class="info_camera" type="text" id="saveInterval" value="<%= data.saveInterval %>" name = "saveInterval" class="input" placeholder="saveInterval" required readonly>
              </td>
            </tr>
            <tr>
-             <td class="info_image_left">최대 저장 갯수</td>
+             <td class="info_image_left">최대 저장 갯수 (개)</td>
              <td>
-            <input class="info_camera" type="text" id="saveNum" value="<%= data.saveNum %>개" name = "saveNum" class="input" placeholder="saveNum" required readonly>
+            <input class="info_camera" type="text" id="saveNum" value="<%= data.saveNum %>" name = "saveNum" class="input" placeholder="saveNum" required readonly>
              </td>
            </tr>
            <tr>
-             <td class="info_image_left">최대 저장 기간</td>
+             <td class="info_image_left">최대 저장 기간 (개월)</td>
              <td>
-             <input class="info_camera" type="text" id="savePeriod" value="<%= data.savePeriod %>개월" name = "savePeriod" class="input" placeholder="savePeriod" required readonly>
+             <input class="info_camera" type="text" id="savePeriod" value="<%= data.savePeriod %>" name = "savePeriod" class="input" placeholder="savePeriod" required readonly>
              </td>
              <!--<td><button class="confirm btn submit" id="confirm_image">확인</button></td>-->
            </tr>
@@ -151,6 +151,8 @@
          <!--<td><button class="confirm btn submit" id="confirm">확인</button></td>-->
          </form>
     </div>
+
+
 
     <div id="setting_image"> <!--이미지 수정 하는 곳-->
         <form action="../setting/update" method="post">
@@ -191,21 +193,21 @@
               <tr></tr>
               <tr></tr>
              <tr>
-               <td class="info_image_left">저장 간격</td>
+               <td class="info_image_left">저장 간격 (초)</td>
                <td>
-                 <input class="info_camera" type="text" id="saveInterval" value="<%= data.saveInterval %>초" name = "saveInterval" class="input" placeholder="saveInterval" required>
+                 <input class="info_camera" type="text" id="saveInterval" value="<%= data.saveInterval %>" name = "saveInterval" class="input" placeholder="saveInterval" required>
                </td>
              </tr>
              <tr>
-               <td class="info_image_left">최대 저장 갯수</td>
+               <td class="info_image_left">최대 저장 갯수 (개)</td>
                <td>
-                 <input class="info_camera" type="text" id="saveNum" value="<%= data.saveNum %>개" name = "saveNum" class="input" placeholder="saveNum" required>
+                 <input class="info_camera" type="text" id="saveNum" value="<%= data.saveNum %>" name = "saveNum" class="input" placeholder="saveNum" required>
                </td>
              </tr>
              <tr>
-               <td class="info_image_left">최대 저장 기간</td>
+               <td class="info_image_left">최대 저장 기간 (개월)</td>
                <td>
-               <input class="info_camera" type="text" id="savePeriod" value="<%= data.savePeriod %>개월" name = "savePeriod" class="input" placeholder="savePeriod" required>
+               <input class="info_camera" type="text" id="savePeriod" value="<%= data.savePeriod %>" name = "savePeriod" class="input" placeholder="savePeriod" required>
                </td>
              </tr>
            </table>
