--- a/views/admin/setting1.ejs
+++ b/views/admin/setting1.ejs
@@ -34,21 +34,21 @@
           <tr></tr>
           <tr></tr>
          <tr>
-           <td class="info_image_left">저장 간격</td>
+           <td class="info_image_left">저장 간격 (초)</td>
            <td>
-              <input class="info_camera" type="text" id="saveInterval" value="<%= data.saveInterval %>초" name = "saveInterval" class="input" placeholder="saveInterval" required>
+              <input class="info_camera" type="text" id="saveInterval" value="<%= data.saveInterval %>" name = "saveInterval" class="input" placeholder="saveInterval" required>
            </td>
          </tr>
          <tr>
-           <td class="info_image_left">최대 저장 갯수</td>
+           <td class="info_image_left">최대 저장 갯수 (개)</td>
            <td>
-              <input class="info_camera" type="text" id="saveNum" value="<%= data.saveNum %>개" name = "saveNum" class="input" placeholder="saveNum" required>
+              <input class="info_camera" type="text" id="saveNum" value="<%= data.saveNum %>" name = "saveNum" class="input" placeholder="saveNum" required>
            </td>
          </tr>
          <tr>
-           <td class="info_image_left">최대 저장 기간</td>
+           <td class="info_image_left">최대 저장 기간 (개월)</td>
            <td>
-             <input class="info_camera" type="text" id="savePeriod" value="<%= data.savePeriod %>개월" name = "savePeriod" class="input" placeholder="savePeriod" required>
+             <input class="info_camera" type="text" id="savePeriod" value="<%= data.savePeriod %>" name = "savePeriod" class="input" placeholder="savePeriod" required>
            </td>
            <!--<td><button class="confirm btn submit" id="confirm_image">확인</button></td>-->
          </tr>
