--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -14,7 +14,7 @@
   <body>
     <div id = "header">
       <div id="logo">
-        <img src="../public/images/technonia_logo.png" id="header" style = "width: 150px;"/>
+        <img src="../public/images/technonia_logo.png" id="header" style = "width: 160px;padding-left: 8px;"/>
       </div>
     </div>
     <div id="main">
