--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -11,7 +11,7 @@ body{
 #logo{
   background-color: rgba( 255, 255, 255, 0.05);
   border-radius: 0 0 15px 15px;
-  padding: 20px;
+  padding: 25px 30px 20px 30px;
   margin-bottom: 10px;
   text-align: left;
   display: inline-block;
@@ -27,7 +27,7 @@ body{
 .roi{
   display: inline-block;
   width: 80%;
-  padding: 30px;
+  padding: 25px 23px 20px 23px;
   border-radius: 0 0 20px 20px;
   border-radius: 5px;
   background-color: #26262c;
@@ -41,15 +41,16 @@ body{
   display: block;
   text-align: left;
   font-size: 1.1em;
+  padding-left: 8px;
+  padding-top: 11px;
   font-weight: bold;
-  padding: 30px;
 }
 #roiContent {
   vertical-align: top;
   margin-bottom: 10px;
   display: grid;
   grid-template-columns: 2fr 5fr 2fr;
-      padding: 30px;
+  padding-top: 30px;
 }
 #roiTab{
   display: inline-block;
@@ -87,6 +88,7 @@ body{
   border: 2px solid rgba( 255, 255, 255, 0.3);
   margin-bottom: 16px;
   cursor: pointer;
+  margin-left: 8px;
 }
 
 .clickedCam{
@@ -98,6 +100,7 @@ body{
   border: 2px solid rgba( 255, 255, 255, 0.8) !important;
   margin-bottom: 16px;
   cursor: pointer;
+  margin-left: 8px;
 }
 
 #submit{
@@ -113,7 +116,7 @@ body{
 #cancel{
   font-size: 15px;
   padding: 5px 40px;
-  background-color: rgba( 255, 255, 255, 0.8);
+  background-color: rgba( 255, 255, 255, 0.7);
   display: inline-block;
   border-radius: 30px;
   border: none;
