--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -103,6 +103,18 @@ body{
   margin-left: 8px;
 }
 
+.completeCam{
+  display: inline-block;
+  color: rgba( 255, 255, 255, 0.8) !important;
+  padding: 1px 15px;
+  font-size: 0.8em;
+  border-radius: 20px;
+  border: 2px solid rgba( 255, 255, 255, 0.8) !important;
+  margin-bottom: 16px;
+  cursor: pointer;
+  margin-left: 8px;
+}
+
 #submit{
   font-size: 15px;
   padding: 5px 40px;
