업체정보 수정

--- a/public/css/setting.css
+++ b/public/css/setting.css
@@ -75,7 +75,7 @@ input, select{
   text-align:center;
 }
 
-div#setting input{
+div#setting input, div#info_company input{
   color:grey;
 }
 
@@ -116,8 +116,12 @@ button#confirm, button#confirm_image{
   margin-top:20px;
   margin-right:50px;
 }
+button#confirm_company{
+  text-align: center;
+  width: 80px;
+}
 
-button#confirm_camera, button#confirm_image{
+button#confirm_camera, button#confirm_image, button#confirm_company{
   display:none;
 }
 .info_camera{
